Addin new node-sass for node12. Fixing LinkedIn icon not showing problem

--- a/src/components/Icon/Icon.scss
+++ b/src/components/Icon/Icon.scss
@@ -43,8 +43,9 @@
   color: $github-icon-color;
 }
 
-.linkedin-icon {
+.linkedIn-icon {
   color: $linkedin-icon-color;
+  z-index: 55;
 }
 
 .fcc-icon {
